--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ a:focus{
 	text-decoration: none;
 }
 #home{
-	background: url(../img/titlepeq.jpg);
+	background: url(../img/software-de-gestão-de-frotas.jpg);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
